# voxscribe

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Procfile  START.SH  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
app/: bootstrap.py  config.py  main.py
app/adapters/inbound/: cli.py  worker.py
app/adapters/inbound/web/: routes.py  schemas.py
app/adapters/inbound/web/templates/: base.html  job.html  upload.html
app/adapters/outbound/converter/: pydub_converter.py
app/adapters/outbound/engines/: faster_whisper_engine.py  groq_engine.py  openai_engine.py
app/adapters/outbound/persistence/: sqlite_repository.py
app/adapters/outbound/queue/: rq_queue.py
app/adapters/outbound/storage/: local_file_storage.py
app/application/: dto.py  get_job_status.py  process_transcription.py  submit_transcription.py
app/domain/: exceptions.py
app/domain/entities/: audio_file.py  transcription_job.py  transcription_result.py
app/domain/services/: audio_validator.py  chunking_strategy.py
app/domain/value_objects/: audio_format.py  job_status.py
app/ports/: audio_converter.py  audio_storage.py  job_queue.py  job_repository.py  transcription_engine.py
specs/001-modern-audio-webui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-modern-audio-webui/checklists/: requirements.md
specs/001-modern-audio-webui/contracts/: api.md
specs/001-ui-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ui-redesign/checklists/: requirements.md
specs/001-ui-redesign/contracts/: api-jobs-enhanced.yaml
tests/e2e/: test_api.py
tests/integration/adapters/: test_local_file_storage.py  test_pydub_converter.py  test_sqlite_repository.py
tests/unit/application/: test_process_transcription.py  test_submit_transcription.py
tests/unit/domain/: test_audio_file.py  test_chunking_strategy.py  test_transcription_job.py
