[tool.poetry]
name = "audio"
version = "0.1.0"
description = ""
authors = ["Pedro Balbino <phsb5321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydub = {version = "0.25.1", markers = "python_version >= \"3.12\" and python_version < \"4.0\""}
speechrecognition = {version = "3.10.4", markers = "python_version >= \"3.12\" and python_version < \"4.0\""}
certifi = {version = "2024.7.4", markers = "python_version >= \"3.12\" and python_version < \"4.0\""}
charset-normalizer = {version = "3.3.2", markers = "python_version >= \"3.12\" and python_version < \"4.0\""}
idna = {version = "3.7", markers = "python_version >= \"3.12\" and python_version < \"4.0\""}
requests = {version = "2.32.3", markers = "python_version >= \"3.12\" and python_version < \"4.0\""}
typing-extensions = {version = "4.12.2", markers = "python_version >= \"3.12\" and python_version < \"4.0\""}
urllib3 = {version = "2.2.2", markers = "python_version >= \"3.12\" and python_version < \"4.0\""}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
